added scheme. Added example to config

--- a/datings/.config.js.example
+++ b/datings/.config.js.example
@@ -1,2 +1,5 @@
 var port = 3009
 module.exports.port = port
+module.exports.database = datings
+module.exports.dbuser	= datings
+module.exports.dbpassword = 1234567
