--- a/datings/package.json
+++ b/datings/package.json
@@ -13,6 +13,8 @@
     "jade": "~1.11.0",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
+    "nodemailer": "^1.10.0",
+    "sequelize": "^3.15.0",
     "serve-favicon": "~2.3.0"
   }
 }
